src/CPQ/Antlr/Generated  Files/CPLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\neomi.yehuda\Msc\Compilers\CPQ\src\CPQ\Antlr\CPL.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CPQ {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CPLParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, ADDOP=9, 
		AND=10, BREAK=11, CASE=12, CAST=13, DEFAULT=14, ELSE=15, FLOAT=16, IF=17, 
		INPUT=18, INT=19, OUTPUT=20, MULOP=21, NOT=22, OR=23, RELOP=24, SWITCH=25, 
		WHILE=26, ID=27, NUM=28, DELIMITED_COMMENT=29, WHITESPACES=30, SINGLE_LINE_COMMENT=31, 
		MULTILINE_COMMENT=32, SPACES=33;
	public const int
		RULE_program = 0, RULE_declarations = 1, RULE_declaration = 2, RULE_type = 3, 
		RULE_idlist = 4, RULE_stmt = 5, RULE_assignment_stmt = 6, RULE_input_stmt = 7, 
		RULE_output_stmt = 8, RULE_if_stmt = 9, RULE_while_stmt = 10, RULE_switch_stmt = 11, 
		RULE_caselist = 12, RULE_break_stmt = 13, RULE_stmt_block = 14, RULE_stmtlist = 15, 
		RULE_boolexpr = 16, RULE_boolterm = 17, RULE_boolfactor = 18, RULE_expression = 19, 
		RULE_term = 20, RULE_factor = 21;
	public static readonly string[] ruleNames = {
		"program", "declarations", "declaration", "type", "idlist", "stmt", "assignment_stmt", 
		"input_stmt", "output_stmt", "if_stmt", "while_stmt", "switch_stmt", "caselist", 
		"break_stmt", "stmt_block", "stmtlist", "boolexpr", "boolterm", "boolfactor", 
		"expression", "term", "factor"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "';'", "','", "'='", "'('", "')'", "'{'", "'}'", null, "'&&'", 
		"'break'", "'case'", null, "'default'", "'else'", "'float'", "'if'", "'input'", 
		"'int'", "'output'", null, "'!'", "'||'", null, "'switch'", "'while'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "ADDOP", "AND", 
		"BREAK", "CASE", "CAST", "DEFAULT", "ELSE", "FLOAT", "IF", "INPUT", "INT", 
		"OUTPUT", "MULOP", "NOT", "OR", "RELOP", "SWITCH", "WHILE", "ID", "NUM", 
		"DELIMITED_COMMENT", "WHITESPACES", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
		"SPACES"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CPL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CPLParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public DeclarationsContext declarations() {
			return GetRuleContext<DeclarationsContext>(0);
		}
		public Stmt_blockContext stmt_block() {
			return GetRuleContext<Stmt_blockContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44; declarations(0);
			State = 45; stmt_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationsContext : ParserRuleContext {
		public DeclarationsContext declarations() {
			return GetRuleContext<DeclarationsContext>(0);
		}
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarations; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterDeclarations(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitDeclarations(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationsContext declarations() {
		return declarations(0);
	}

	private DeclarationsContext declarations(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, _parentState);
		DeclarationsContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_declarations, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.Lt(-1);
			State = 52;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclarationsContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_declarations);
					State = 48;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 49; declaration();
					}
					} 
				}
				State = 54;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public IdlistContext idlist() {
			return GetRuleContext<IdlistContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55; idlist(0);
			State = 56; Match(T__0);
			State = 57; type();
			State = 58; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(CPLParser.INT, 0); }
		public ITerminalNode FLOAT() { return GetToken(CPLParser.FLOAT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			_la = _input.La(1);
			if ( !(_la==FLOAT || _la==INT) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdlistContext : ParserRuleContext {
		public IdlistContext idlist() {
			return GetRuleContext<IdlistContext>(0);
		}
		public ITerminalNode ID() { return GetToken(CPLParser.ID, 0); }
		public IdlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_idlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterIdlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitIdlist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdlistContext idlist() {
		return idlist(0);
	}

	private IdlistContext idlist(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		IdlistContext _localctx = new IdlistContext(_ctx, _parentState);
		IdlistContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_idlist, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 63; Match(ID);
			}
			_ctx.stop = _input.Lt(-1);
			State = 70;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new IdlistContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_idlist);
					State = 65;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 66; Match(T__2);
					State = 67; Match(ID);
					}
					} 
				}
				State = 72;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public Assignment_stmtContext assignment_stmt() {
			return GetRuleContext<Assignment_stmtContext>(0);
		}
		public Input_stmtContext input_stmt() {
			return GetRuleContext<Input_stmtContext>(0);
		}
		public Output_stmtContext output_stmt() {
			return GetRuleContext<Output_stmtContext>(0);
		}
		public If_stmtContext if_stmt() {
			return GetRuleContext<If_stmtContext>(0);
		}
		public While_stmtContext while_stmt() {
			return GetRuleContext<While_stmtContext>(0);
		}
		public Switch_stmtContext switch_stmt() {
			return GetRuleContext<Switch_stmtContext>(0);
		}
		public Break_stmtContext break_stmt() {
			return GetRuleContext<Break_stmtContext>(0);
		}
		public Stmt_blockContext stmt_block() {
			return GetRuleContext<Stmt_blockContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_stmt);
		try {
			State = 81;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 73; assignment_stmt();
				}
				break;
			case INPUT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74; input_stmt();
				}
				break;
			case OUTPUT:
				EnterOuterAlt(_localctx, 3);
				{
				State = 75; output_stmt();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 4);
				{
				State = 76; if_stmt();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 77; while_stmt();
				}
				break;
			case SWITCH:
				EnterOuterAlt(_localctx, 6);
				{
				State = 78; switch_stmt();
				}
				break;
			case BREAK:
				EnterOuterAlt(_localctx, 7);
				{
				State = 79; break_stmt();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 8);
				{
				State = 80; stmt_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assignment_stmtContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(CPLParser.ID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Assignment_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterAssignment_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitAssignment_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assignment_stmtContext assignment_stmt() {
		Assignment_stmtContext _localctx = new Assignment_stmtContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_assignment_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(ID);
			State = 84; Match(T__3);
			State = 85; expression(0);
			State = 86; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Input_stmtContext : ParserRuleContext {
		public ITerminalNode INPUT() { return GetToken(CPLParser.INPUT, 0); }
		public ITerminalNode ID() { return GetToken(CPLParser.ID, 0); }
		public Input_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterInput_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitInput_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInput_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Input_stmtContext input_stmt() {
		Input_stmtContext _localctx = new Input_stmtContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_input_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(INPUT);
			State = 89; Match(T__4);
			State = 90; Match(ID);
			State = 91; Match(T__5);
			State = 92; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Output_stmtContext : ParserRuleContext {
		public ITerminalNode OUTPUT() { return GetToken(CPLParser.OUTPUT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Output_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_output_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterOutput_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitOutput_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOutput_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Output_stmtContext output_stmt() {
		Output_stmtContext _localctx = new Output_stmtContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_output_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(OUTPUT);
			State = 95; Match(T__4);
			State = 96; expression(0);
			State = 97; Match(T__5);
			State = 98; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_stmtContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(CPLParser.IF, 0); }
		public BoolexprContext boolexpr() {
			return GetRuleContext<BoolexprContext>(0);
		}
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(CPLParser.ELSE, 0); }
		public If_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterIf_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitIf_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_stmtContext if_stmt() {
		If_stmtContext _localctx = new If_stmtContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_if_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(IF);
			State = 101; Match(T__4);
			State = 102; boolexpr(0);
			State = 103; Match(T__5);
			State = 104; stmt();
			State = 105; Match(ELSE);
			State = 106; stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_stmtContext : ParserRuleContext {
		public ITerminalNode WHILE() { return GetToken(CPLParser.WHILE, 0); }
		public BoolexprContext boolexpr() {
			return GetRuleContext<BoolexprContext>(0);
		}
		public StmtContext stmt() {
			return GetRuleContext<StmtContext>(0);
		}
		public While_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterWhile_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitWhile_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_stmtContext while_stmt() {
		While_stmtContext _localctx = new While_stmtContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_while_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; Match(WHILE);
			State = 109; Match(T__4);
			State = 110; boolexpr(0);
			State = 111; Match(T__5);
			State = 112; stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Switch_stmtContext : ParserRuleContext {
		public ITerminalNode SWITCH() { return GetToken(CPLParser.SWITCH, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public CaselistContext caselist() {
			return GetRuleContext<CaselistContext>(0);
		}
		public ITerminalNode DEFAULT() { return GetToken(CPLParser.DEFAULT, 0); }
		public StmtlistContext stmtlist() {
			return GetRuleContext<StmtlistContext>(0);
		}
		public Switch_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switch_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.EnterSwitch_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICPLListener typedListener = listener as ICPLListener;
			if (typedListener != null) typedListener.ExitSwitch_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICPLVisitor<TResult> typedVisitor = visitor as ICPLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwitch_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Switch_stmtContext switch_stmt() {
		Switch_stmtContext _localctx = new Switch_stmtContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_switch_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(SWITCH);
			State = 115; Match(T__4);
			State = 116; expression(0);
			State = 117; Match(T__5);
			State = 118; Match(T__6);
			State = 119; caselist(0);
			State = 120; Match(DEFAULT);
			State = 121; Match(T__0);
			State = 122; stmtlist(0);
			State = 123; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
